@@ -37,6 +37,7 @@ export(read_sge_accounting)
 export(round_ram)
 export(save_file_index)
 export(sge_accounting_file)
+export(sge_failed_codes)
 export(sge_make_week_index)
 export(system_info)
 export(users_over_time)
