@@ -7,6 +7,8 @@ NEW FEATURES:
  * Now read_raw_sge_accounting() and read_sge_accounting() accepts also
    file connections as input.
 
+ * Add sge_failed_codes().
+
 DOCUMENTATION:
 
  * Updated SGE accounting vignette.
